rust/crates/astra-cli/src/tui/snapshots/astra__tui__driver_tests__turn_error_state.snap
---
source: crates/astra-cli/src/tui/driver_tests.rs
expression: "(&state, &effects)"
---
(
    State {
        messages: [
            User {
                text: "do a thing",
            },
            System {
                severity: Error,
                text: "rate limited",
            },
        ],
        turn_status: Error(
            "rate limited",
        ),
        permission_mode: Ask,
        input_draft: "",
        viewport_scroll: Bottom,
        session_id: None,
        token_budget: None,
        slash_menu: None,
        slash_items: [],
        mention_menu: None,
        pending_approvals: [],
    },
    [
        SendPrompt(
            "do a thing",
        ),
    ],
)
