rust/crates/astra-cli/src/tui/snapshots/astra__tui__driver_tests__two_turns_state.snap
---
source: crates/astra-cli/src/tui/driver_tests.rs
expression: "&state"
---
State {
    messages: [
        User {
            text: "list the files",
        },
        Tool {
            name: "bash",
            description: "ls /tmp",
            status: Ok,
            duration_ms: Some(
                42,
            ),
            output_summary: Some(
                "3 entries",
            ),
            output: Some(
                "a.txt\nb.txt\nc.txt",
            ),
        },
        Assistant {
            markdown: "There are 3 files.",
        },
        User {
            text: "now delete one",
        },
        Assistant {
            markdown: "Done.",
        },
    ],
    turn_status: Idle,
    permission_mode: Ask,
    input_draft: "",
    viewport_scroll: Bottom,
    session_id: None,
    token_budget: None,
    slash_menu: None,
    slash_items: [],
    mention_menu: None,
    pending_approvals: [],
}
